--- a/sample.bib
+++ b/sample.bib
@@ -10,7 +10,7 @@ address = {M\"{u}nchen}
 } 
 
 @inproceedings{jung05,
-	author = {Younghee Jung, Per Persson, Jan Blom},
+  author = {Jung, Younghee AND Persson, Per AND Blom, Jan},
 	title = {DeDe: design and evaluation of a context-enhanced mobile messaging system},
 	booktitle = {CHI '05 Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
 	year = {2005},
@@ -20,7 +20,7 @@ address = {M\"{u}nchen}
 } 
 
 @inproceedings{samar02,
-	author = {Punitha Manalavan, Asad Samar, Mike Schneider, Sara Kiesler, Dan Siewiorek},
+  author = {Manalavan, Punitha AND Samar, Asad AND Schneider, Mike AND Kiesler, Sara AND Siewiorek, Dan},
 	title = {In-car cell phone use: mitigating risk by signaling remote callers},
 	booktitle = {CHI EA '02 CHI '02 Extended Abstracts on Human Factors in Computing Systems},
 	year = {2002},
@@ -39,6 +39,14 @@ address = {M\"{u}nchen}
   note =         {Retrieved August 22, 2016 from
                   \url{https://www.youtube.com/watch?v=37ia7S4Lsv4}},
   annote =       {Video URL}
+}
+
+@ONLINE{farm14,
+author = {State Farm},
+title = {DRIVERS ADMIT TO USING THEIR PHONE WHEN BEHIND THE WHEEL - HERE'S WHEN},
+year = {2014},
+url = {http://www.multivu.com/players/English/7292854-state-farm-distracted-driving-survey-cellphone-use/},
+note = {Retrieved August 31, 2016}
 }
 
 @ONLINE{goo16,
