--- a/ATH_Paper_CCC.tex
+++ b/ATH_Paper_CCC.tex
@@ -6,20 +6,20 @@
 
 % Copyright
 %\CopyrightYear{2016}
-%%\setcopyright{acmcopyright}
+%\setcopyright{acmcopyright}
 %\setcopyright{acmlicensed}
-%%\setcopyright{rightsretained}
-%%\setcopyright{usgov}
-%%\setcopyright{usgovmixed}
-%%\setcopyright{cagov}
-%%\setcopyright{cagovmixed}
-%% DOI
+%\setcopyright{rightsretained}
+%\setcopyright{usgov}
+%\setcopyright{usgovmixed}
+%\setcopyright{cagov}
+%\setcopyright{cagovmixed}
+% DOI
 %\doi{http://dx.doi.org/10.475/123_4}
-%% ISBN
+% ISBN
 %\isbn{123-4567-24-567/08/06}
-%%Conference
+%Conference
 %\conferenceinfo{CHI'16,}{May 07--12, 2016, San Jose, CA, USA}
-%%Price
+%Price
 %\acmPrice{\$15.00}
 
 % Use this command to override the default ACM copyright statement
@@ -29,21 +29,9 @@
 %% HOW TO OVERRIDE THE DEFAULT COPYRIGHT STRIP --
 %% Please note you need to make sure the copy for your specific
 %% license is used here!
-% \toappear{
-% Permission to make digital or hard copies of all or part of this work
-% for personal or classroom use is granted without fee provided that
-% copies are not made or distributed for profit or commercial advantage
-% and that copies bear this notice and the full citation on the first
-% page. Copyrights for components of this work owned by others than ACM
-% must be honored. Abstracting with credit is permitted. To copy
-% otherwise, or republish, to post on servers or to redistribute to
-% lists, requires prior specific permission and/or a fee. Request
-% permissions from \href{mailto:Permissions@acm.org}{Permissions@acm.org}. \\
-% \emph{CHI '16},  May 07--12, 2016, San Jose, CA, USA \\
-% ACM xxx-x-xxxx-xxxx-x/xx/xx\ldots \$15.00 \\
-% DOI: \url{http://dx.doi.org/xx.xxxx/xxxxxxx.xxxxxxx}
-% }
-
+ \toappear{
+ Permission to make digital or hard copies of part or all of this work for personal or classroom use is granted without fee provided that copies are not made or distributed for profit or commercial advantage and that copies bear this notice and the full citation on the first page. Copyrights for third-party components of this work must be honored. For all other uses, contact the Owner/Author.\newline\newline\copyright \  2016 Copyright held by the owner/author(s).
+ }
 % Arabic page numbers for submission.  Remove this line to eliminate
 % page numbers for the camera ready copy
 % \pagenumbering{arabic}
@@ -169,7 +157,7 @@
 %5  relative to previous years. Abstracts should be about 150 %words and holdrios
 %  are required.
 %>>>>>>> Stashed changes:proceedings.tex
-How to reduce distraction by a smartphone while driving is a common question nowadays. The number of mobile phone users is increasing enormously. And concurrently increases the desire of being available - no matter if it's a situation you shouldn't be distracted or even in danger situations. Due to this desire, the callee should not decide whether to be called but the caller. Here we describe a concept and a implementation to reduce the communication in the car - especially in danger situations. We designed an app that hands over the responsibility about, if a call should be executed, to the initiator by displaying informations about the context of the contact. The final user study confirmed our approach and the context information is perceived correctly.
+The number of mobile phone users is increasing enormously and concurrently increases the desire of being available. Therefore it is nowadays a common question, how distractions by phone calls while driving can be reduced. To achieve this, it should be the caller, who should decide whether to call a person or not, depending on the context of the callee. By displaying information about the context of the callee, the responsibility, whether a call should be executed or not, is transferred to the initiator of the call. In this paper we describe a concept and an app implementation to reduce the communication in the car. The conducted user study confirmed our thesis of the context information being perceived correctly.
 
 \end{abstract}
 
@@ -179,37 +167,37 @@ How to reduce distraction by a smartphone while driving is a common question now
 \keywords{Automotive user interfaces, calling while driving, context sharing, driving safety, phone call.}
 
 \section{Introduction}
-There are about 4.5 to 5 billion mobile phone users worldwide \cite{stat14} and about 80 \% of all drivers are owning a smartphone.
+There are about 4.5 to 5 billion mobile phone users worldwide \cite{stat14} and about 80 \% of all drivers are owning a smartphone \cite{farm14}.
+
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=.8\linewidth]{figures/worldwide_phoneuser}
-	\caption{Mobilephone users worldwide} \cite{stat14}
+	\caption{Number of mobile phone users worldwide in billions from 2013-2018.} \cite{stat14}
 	\label{fig:app_worldwide}
-\end{figure} The extensive use of smartphones in the daily life produces a huge desire to be "always on". This desire leads people to want to be available, in situations they should better take care about their environment, e.g. when driving a vehicle in bad weather conditions. The risk of collision is four times higher during cell phone use while driving \cite{iihs05}.
+\end{figure}
 
-Therefore the responsibility to execute a call should be on the side of the initiator. But in order to give the initiator the responsibility, there is the need to transfer context information about the callee.
+The extensive use of smartphones in the daily life produces a huge desire to be "always on". Due to this desire, phone users sometimes experience situations where they are highly occupied by their smartphone although these situations require their full attention and reaction to the environment. For instance, when driving a vehicle in bad weather conditions. Even though it is known that the risk of of collision is four times higher during cell phone use \cite{iihs05}, drivers willingly accept this risk. Even legal prohibitions could not increase the safety. Therefore the safety has to be ensured by giving the responsibility to execute a call to the initiator, who is not driving. Since the initiator is located in the outside environment of the driver, he has no activity or context data about the person he wants to call. Hence there is need to transfer these information about the callee to the caller.
 
 Context information could be:
 \begin{itemize}
-	\item \textit{In Vehicle}\\
-	If the contact is driving or not.
-	\item \textit{Vehicle Type}\\
+	\item \textit{In vehicle}\\
+	Abstract information if the callee is driving or not.
+	\item \textit{Vehicle type}\\
 	The type of the vehicle, e.g. car or bicycle.
-%	\item \textit{Roadtype}\\
-%	If the contact is "in vehicle" the roadtype could be relevant, which means is the contact driving through the city or on a motorway.
+%	\item \textit{Road type}\\
+%	If the contact is"in vehicle", then the road type could be relevant, e.g. driving through the city or on a motorway.
 	\item \textit{Speed}\\
 	The speed with which the contact is on the road.
-	\item \textit{Weather Conditions}\\
-	The weather conditions at the location of the contact. Is it sunny or raining?
-	\item \textit{Geo Location}\\
+%	\item \textit{Weather conditions}\\
+%	The weather conditions at the location of the callee, e.g. sunny or rainy.
+	\item \textit{Geographic location}\\
 	The exact position or the approximate region.
 	\item \textit{Speakerphone}\\
-	If hands-free speaking is possible through speakerphone in the vehicle.
-	\item \textit{And many more}
+	The information if hands-free speaking is possible through speakerphone in the vehicle.
+	\item \textit{And many more\dots (see table \ref{tab:cont})}
 \end{itemize}
 
-In the last decade there was a lot of research about this topic. Following we will point some related work to show the wide field of the current research as well as our concept and the implementation of the context-call Android application we designed. After building the application we conducted a user study to prove our expectation.
-
+In the last decade there was a lot of research about this topic. In the following we will point some related work to show the wide field of the current research and as well as our concept and the implementation of the Android application we designed. After building the application we conducted a user study to prove our expectation.
 
 \section{Related Work}
 %The problem of transfering the responsibility of a call to the initiator is to deliver the essential information to make a qualitative decision.
@@ -222,31 +210,30 @@ In the last decade there was a lot of research about this topic. Following we wi
 \item \textbf{Red}: Call undesired by the callee (only call if very urgent)
 \end{enumerate}
  
- The latter of these statuses can only be set manually by the driver, whereas the first two are automatically detected through in-car sensors. The evaluation of their system showed that the recommendations to the callers were considered and that the systems would be used by the drivers to make their driving experience more relaxing.
+The latter of these statuses can only be set manually by the driver, whereas the first two are automatically detected through in-car sensors. The evaluation of their system showed that the recommendations to the callers were considered and that the systems would be used by the drivers to make their driving experience more relaxing.
  
- DeDe is another approach to define context-aware communication. Y. Jung, P. Persson and J. Blom present in their paper \cite{jung05} the design, implementation and validation of an enhanced mobile phone messaging system (DeDe), allowing the sender to define the context in which the message will be deliverd to the recipient.
+DeDe is another approach to define context-aware communication. Y. Jung, P. Persson and J. Blom present in their paper \cite{jung05} the design, implementation and validation of an enhanced mobile phone messaging system (DeDe), allowing the sender to define the context in which the message will be deliverd to the recipient.
  
- In Pittsburgh they researched in 2002 \cite{samar02} a signaling method to mitigate the risk of automobile accidents with in-car cell phone use. They show in a experiment how remote cell phone callers were induced to speak less during critical driving periods and in a second experiment, how the performance of a driver improved when callers reduced talking levels during critical driving situations.
->>>>>>> origin/master
+In Pittsburgh they researched in 2002 \cite{samar02} a signaling method to mitigate the risk of automobile accidents with in-car cell phone use. They show in a experiment how remote cell phone callers were induced to speak less during critical driving periods and in a second experiment, how the performance of a driver improved when callers reduced talking levels during critical driving situations.
 
-\section{Concept}
+\section{Prototype}
 The goal was to build a simple tool which fits straight into the app-infrastructure of a usual smartphone user. We decided to replace the default contacts list app with our implementation of a contacts list app.
 
 The gap that our app should close is the transfer of the context information. With this app the initiator is able to see some relevant information before the call happens, which help to decide if the call is important enough to execute under the given circumstances of the callee.
 
-To deliver the context information from person A to person B the most efficient way is the following:
-person A sends the context information to a server every time the context changes. Person B requests the data from the server when it's required, e.g. when the contact is opened in the contacts list app (see figure \ref{fig:app_concept}).
+To deliver the context information from person~A to person~B the most efficient way is the following:
+person~A sends the context information to a server every time the context changes. Person~B requests the data from the server when it is required, e.g. when the contact is opened in the contacts list app (see figure \ref{fig:app_concept}).
 
 \begin{figure}[H]
 	\centering
 		\includegraphics[width=.95\linewidth]{figures/concept}
-		\caption{Concept}
+		\caption{Concept of exchanging context information.}
 	\label{fig:app_concept}
 \end{figure}
 
-\section{Implementation}
+\subsection{Implementation}
 
-We designed a simple and ordinary contacts app which is enhanced by displaying the context of the person you want to call. In this case and for our goal, context refers particularly to the following information:
+We extended the design of the build-in Android contacts app by displaying the context of the person someone wants to call. In this case and for our goal, context refers particularly to the following information:
 \newline
 
 \begin{center}
@@ -257,21 +244,21 @@ We designed a simple and ordinary contacts app which is enhanced by displaying t
 Context Information\\
 \midrule
 Activity \\
-Road Type \\
+Road type \\
 Destination \\
-Remaining Travel Time \\
+Remaining travel time \\
 Position \\
-Hands-free Speaking \\
+Hands-free speaking \\
 Speed \\
 Weather \\
 \bottomrule
 \end{tabular}
 \end{center}
-\caption[Context Information]{Context Information.\label{tab:cont}}
+\caption[Context Information]{Context information.\label{tab:cont}}
 \end{table}
 \end{center}
 
-Firstly, one will want to know what the callee is doing at the moment. We distinguished between the activities \textit{driving}, \textit{cycling} and \textit{still} whereby the latter means the recipient of the call is doing nothing right now and his/her device is motionless, e.g. on a table etc. Depending on if someone is driving you want to have the listed additional information. One would be the road type which lets you know if someone is driving e.g. in a city or on a highway etc. Another one is the destination the person is heading to and the remaining travel time. Therefore you need the person's current position. This could either be a pinpoint GPS-coordinate, or if the user does not want to share his exact location, just a radius or a place name of his current position. Another very important aspect of the person's context is if hands-free speaking is enabled or disabled while in the car. 
+Firstly, one will want to know what the callee is doing at the moment. We distinguished between the activities \textit{driving}, \textit{cycling} and \textit{still} whereby the latter means the recipient of the call is doing nothing right now and his/her device is motionless, e.g. on a table etc. If someone is driving you want to have the listed additional information. One would be the road type which lets you know if someone is driving e.g. in a city or on a highway etc. Another one is the destination the person is heading to and the remaining travel time. Therefore the person's current position is required. This could either be a pinpoint GPS-coordinate, or if the user does not want to share his exact location, just a radius or a place name of his current position. Another very important aspect of the person's context is if hands-free speaking is enabled or disabled while in the car. 
 
 Furthermore, it is helpful to have data about the speed and the current weather situation. At the recent state of our app all of these information can be accessed automatically except the destination and the remaining travel time, which have to be typed in manually.
 
@@ -296,7 +283,7 @@ The Android-App we built, basically consists of two different views, an overview
 \label{fig:app}
 \end{figure}
 
-On the overview on the left you see all your contacts as you know it from other contacts apps, added with information about a personfs activity, which is shown by the icons next to the image and the string below the name. By tapping on a contact, the detail view appears and shows the additional context information mentioned in table \ref{tab:cont}. The particular case in figure \ref{fig:app_2} for example gives information about the road type, the destination and the remaining travel time. Furthermore you get informed that hands-free speaking is enabled. If you then decide to call `Anna' although she is driving, a small alert pops up and gives you three options (see figure \ref{fig:app_3}). You can either choose to call her or not, or you make use of the `\textit{remind me}'-option which notifies you when her status is `still'.
+In the overview on the left you see all your contacts as you know it from other contacts apps, added with information about a person's activity, which is shown by the icons next to the image and the string below the name. By tapping on a contact, the detail view appears and shows the additional context information mentioned in table \ref{tab:cont}. The particular case in figure \ref{fig:app_2} for example gives information about the road type, the destination and the remaining travel time. Furthermore you get informed that hands-free speaking is enabled. If you then decide to call `Anna' although she is driving, a small alert pops up and gives you three options (see figure \ref{fig:app_3}). You can either choose to call her or not, or you make use of the `\textit{remind me}'-option which notifies you when her status changed to 'still'.
 \begin{figure}[H]
   \centering
   \includegraphics[width=.55\columnwidth]{figures/app_3}
@@ -325,9 +312,6 @@ The detected user activity (e.g. walking, running, biking and driving)
 The latter of these is the important one for the goal of activity and context recognition. All of these information can be combined using \textit{AND}, \textit{OR}, and \textit{NOT} boolean operators to build complicated conditions that have to be met to trigger a notification. E.g. you can construct a condition that says the user is driving in the car AND he is near a pharmacy AND it is during the opening hours of that shop. If these requirements are fulfilled, then you tell the user that he can pick up the wanted medication.
 
 In particular, we used the \textit{Fence API}\footnote{https://developers.google.com/awareness/android-api/fence-api-overview}, which is part of the Awareness API. The concept of \textit{fences} is taken from Geo-Fencing, in which a geographic region, or "Geo- Fence", is defined, and an app receives callbacks when a user enters or leaves a region. What differs in this case is, that an activity is `entered', not a region. So whenever the activity state transitions, it lets our app react to the user's current activity. For example: "Tell me whenever the user is driving". Once the conditions are met, the app receives a callback and we can update the status of a user.
-
-
-
 
 \section{User Study}
 To evaluate our concept and the actual implementation we invited a total of 25 participants to our user study. As the overall goal was to evaluate if users perceive the context information provided by our application correctly, we decided to generate 10 different use-cases (scenarios). We vocally discussed each scenario with the current participant, but all the context information had to be pulled out from the running app on a provided smartphone. Differing by the call trigger (meaning the reason why a participant had to call a person) and the context the person being called (callee) is in, the participants had to decide whether they would like to: 
